# multi-llm-agent

./: .env.example  .gitignore  README.md  comprehensive_ab_mcts_test.py  enhanced_ab_mcts_m_summary.md  pyproject.toml  test_ab_mcts_simple.py  test_enhanced_ab_mcts.py  test_enhanced_ab_mcts_m.py  test_full_ab_mcts.py
config/: default.yaml
examples/: ab_mcts_example.py
src/multi_llm_agent/: cli.py
src/multi_llm_agent/ab_mcts/: __init__.py  ab_mcts_a.py  ab_mcts_m.py  algorithm.py  base.py  enhanced_ab_mcts_a.py  enhanced_ab_mcts_m.py  imports.py  ranker.py  tree.py  types.py
src/multi_llm_agent/core/: base.py  selector.py
