[project]
name = "multi-llm-agent"
version = "0.1.0"
description = "Intelligent Multi-LLM Agentic Framework with Adaptive Model Switching"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.54.0",
    "anthropic>=0.34.0",
    "google-generativeai>=0.8.0",
    "fire>=0.7.0",
    "pydantic>=2.8.0",
    "python-dotenv>=1.0.1",
    "tenacity>=8.2.2",
    "rich>=13.7.0",
    "typer>=0.12.0",
    "httpx>=0.27.0",
    "asyncio>=3.4.3",
    "aiofiles>=24.1.0",
    "pyyaml>=6.0",
    "jinja2>=3.1.4",
    "tiktoken>=0.7.0",
    "scipy>=1.13.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "plotly>=5.22.0",
    "streamlit>=1.37.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "websockets>=12.0",
    "redis>=5.0.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.13.0",
    "celery>=5.4.0",
    "flower>=2.0.0",
    "prometheus-client>=0.20.0",
    "structlog>=24.2.0",
    "click>=8.1.0",
    "tqdm>=4.66.0",
    "colorama>=0.4.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "flake8>=7.1.0",
    "mypy>=1.11.0",
    "pre-commit>=3.8.0",
]

benchmark = [
    "datasets>=2.20.0",
    "evaluate>=0.4.2",
    "wandb>=0.17.0",
    "mlflow>=2.15.0",
    "seaborn>=0.13.0",
    "matplotlib>=3.9.0",
]

web = [
    "gradio>=4.40.0",
    "chainlit>=1.1.0",
    "nicegui>=1.4.0",
]

[project.scripts]
mla = "multi_llm_agent.cli:main"
mla-server = "multi_llm_agent.server:run"
mla-web = "multi_llm_agent.web:launch"

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/multi_llm_agent"]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=multi_llm_agent --cov-report=html --cov-report=term-missing"
